[project]
name = "merit-badge-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "myrrlyn", email = "self@myrrlyn.net" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
meritbadge = "merit_badge_py:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
